testdata/invalid/internal/domain/noalias/core/model/item.go
package model

type Item struct {
	ID string
}
